# tilecut

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  benchmark.sh  conanfile.py  conanfile.txt  embedded_grid.hpp  multi_threaded.cpp  single_threaded.cpp  sqlite_utils.h
.github/workflows/: conan-multi-platform.yml
include/common/: assert.hpp  cast.hpp  log.hpp
include/ka/common/: assert.hpp  cast.hpp  fixed.hpp  hash.hpp
kononovarseniy/common/: CMakeLists.txt
kononovarseniy/common/cmake/: warnings.cmake
kononovarseniy/common/include/common/: fixed.hpp  hash.hpp  log.hpp
kononovarseniy/common/include/ka/common/: assert.hpp  cast.hpp  fixed.hpp
kononovarseniy/common/src/: log.cpp
src/: log.cpp
src/exact/: CMakeLists.txt  README.md
src/exact/include/exact/: GridRounding.hpp  HotPixelCollector.hpp  HotPixelIndex.hpp  HotPixelOrder.hpp  grid.hpp  line_intersects_cell.hpp  snap_round.hpp
src/exact/include/ka/exact/: GridParameters.hpp  GridRounding.hpp  HotPixelCollector.hpp  HotPixelIndex.hpp  grid.hpp  orientation.hpp  snap_round.hpp
src/exact/src/: HotPixelCollector.cpp  common.hpp  constants.hpp  expansion.hpp  grid.cpp  line_intersects_cell.cpp  orientation.cpp
src/exact/src/grid/: border_between_coordinates.cpp  border_intersection.cpp  cell_containg_position.cpp  common.hpp  line_intersects_cell.cpp
src/exact/test/: check_column_border_intersection.cpp  check_column_border_intersection.hpp  test_check_column_border_intersection.cpp  test_column_border_intersection.cpp  test_orientation.cpp  test_snap_rounding.cpp
src/generate_grid/: CMakeLists.txt  README.md
src/generate_grid/src/: MPFRDouble.hpp  main.cpp
src/geometry_types/: CMakeLists.txt  README.md
src/geometry_types/include/geometry_types/: HalfedgeDataStructure.hpp  Segment2.hpp  Vec2.hpp
src/geometry_types/include/ka/geometry_types/: Segment2.hpp  Vec2.hpp
src/tilecut/: CMakeLists.txt  README.md
src/tilecut/include/ka/tilecut/: HotPixelCollector.hpp  HotPixelIndex.hpp  HotPixelOrder.hpp  LineSnapper.hpp  LineSnapperCoordinateHandler.hpp  TileCellGrid.hpp  TileGrid.hpp  collect_tiles.hpp  cut_polyline.hpp  filter_segments.hpp  find_cuts.hpp  find_hot_pixels.hpp  hot_pixel_less.hpp  lerp_along_segment.hpp  orient.hpp  polygon_orientation.hpp  snap_round.hpp  sort_hot_pixels_along_segment.hpp
src/tilecut/include/tilecut/: collect_tiles.hpp  filter_segments.hpp  find_cuts.hpp  orient.h  tilecut.h  uvec16.h
src/tilecut/src/: HotPixelCollector.cpp  collect_tiles.cpp  filter_segments.cpp  find_cuts.cpp  orient.hpp  tilecut.cpp
src/tilecut/test/: debug_output.hpp  mock_grid_parameters.hpp  test_cut_polyline.cpp  test_find_cuts.cpp  test_lerp_along_segment.cpp  test_line_snapper.cpp  test_orient.cpp  test_polygon_orientation.cpp  test_snap_rounding.cpp  test_sort_hot_pixels_along_segment.cpp  test_tile_cell_grid.cpp  test_tile_grid.cpp
test_package/: CMakeLists.txt  conanfile.py  embedded_grid.hpp  grid.hpp.in  main.cpp
